<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="banner_ad_unit_id">ca-app-pub-7167613566724070/4121543548</string>
    <string name="app_name_full">Just Call Recorder</string>
    <string name="app_runnig">Call recording enabled</string>
    <string name="app_recording">Recording</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_saved">Saved</string>
    <string name="title_activity_recordings">Records</string>
    <string name="confirm">confirm action</string>
    <string name="are_you_sure">are you sure ?</string>
    <string name="new_call_recorded">new call recorded</string>
    <string name="recording_is_disabled_enable">Recording is disabled. Do you want to enable it ?</string>
    
    <string name="ar_play">Play</string>
    <string name="ar_delete">Delete</string>
    <string name="ar_contact">Contact detail</string>
    <string name="ar_history">History</string>
    <string name="ar_ignore_contact_add">Add contact to ignored</string>
    <string name="ar_ignore_contact_rem">Remove contact from ignored</string>
    <string name="ar_record_contact_add">Add contact to recorded</string>
    <string name="ar_record_contact_rem">Remove contact from recorded</string>
    <string name="ar_save">Save</string>
    <string name="ar_unsave">Remove from saved</string>
    <string name="ar_auto_save_add">Add this contact to Auto Save</string>
    <string name="ar_auto_save_rem">Remove this contact from Auto Save</string>
    <string name="added_to">Added to </string>
    <string name="removed_from">Removed from </string>
    <string name="no_such_contact">Not found contact with number </string>
    <string name="ar_moved_saved">record saved</string>
    <string name="ar_moved_back">record removed from saved</string>
    <string name="ar_share">Share</string>
    <string name="ar_call">Call</string>
    <string name="selected">selected</string>
    <string name="recording">record started </string>
    
    <string name="settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_storeage">Storage</string>
    <string name="pref_header_contacts">Contacts</string>
    <string name="pref_dropbox">Store in Dropbox (PRO)</string>
    <string name="pref_gdrive">Store in Google Drive (PRO)</string>
    <string name="pref_wifi">Send to cloud only if Wifi connection</string>
    <string name="pref_enable_recording">Enable Recording</string>
    <string name="pref_language">Language</string>
    <string name="pref_file_type">File type</string>
    <string name="pref_sound_source">Sound source</string>
    <string name="pref_increase_volume">Increase volume level during recording</string>
    <string name="pref_records_size">Records kept in inbox</string>
    <string name="pref_record_contacts">Record only selected contacts</string>
    <string name="pref_ignore_contacts">Ignore selected contacts</string>
    <string name="pref_persistent_contacts">Auto Save contacts records will stay forever</string>
    <string name="pref_record_by_shake">Record by shaking (PRO)</string>
    <string name="pref_record_destination">Records destination</string>
    <string name="pref_record_destination_restore">Restore default recording dir</string>
    <string name="pref_record_destination_restored">Restored default recording dir</string>
    <string name="pref_contacts_mode">Record selected or ignore</string>
    
    <string-array name="pref_contacts_mode_titles">
        <item>Ignore selected</item>
        <item>Record selected (PRO)</item>
    </string-array>
    <string-array name="pref_contacts_mode_values">
        <item>ignore</item>
        <item>record</item>
    </string-array>
    <string-array name="pref_language_titles">
        <item>System</item>
        <item>English</item>
        <item>Polish</item>
    </string-array>
    <string-array name="pref_language_values">
        <item>sys</item>
        <item>en</item>
        <item>pl</item>
    </string-array>
    <string-array name="pref_sound_source_titles">
        <item>incoming and outgoing</item>
        <item>only incoming</item>
        <item>only outgoing</item>
    </string-array>
    <string-array name="pref_sound_source_values">
        <item>in_and_out</item>
        <item>in</item>
        <item>out</item>
    </string-array>
    <string-array name="pref_file_type_titles">
        <item>3gp</item>
        <item>amr</item>
    </string-array>
    <string-array name="pref_records_size_titles">
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>40</item>
        <item>100</item>
        <item>200</item>
        <item>500 (PRO)</item>
        <item>1000 (PRO)</item>
    </string-array>
    <integer-array name="pref_records_size_values">
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>40</item>
        <item>100</item>
        <item>200</item>
        <item>500</item>
        <item>1000</item>
    </integer-array>
    <integer-array name="pref_records_size_pro">
        <item>500</item>
        <item>1000</item>
    </integer-array>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_recording_notification">Recording notification</string>
    <string name="pref_title_new_record_notifications">New record notification</string>
    <string name="app_title">Just Call Recorder</string>
	<string name="pref_buy_pro">Buy Pro version</string>
	<string name="connect">connect</string>
	<string name="login">login</string>
	<string name="logout">logout</string>
	<string name="enabled">enabled</string>
	<string name="disabled">disabled</string>
	<string name="pref_show_about">About</string>
	<string name="choose">choose</string>
</resources>
